# tbdflow

./: .dod.yml  .gitignore  .tbdflow.yml  AGENTS.md  AGENTS_merged.md  AGENTS_with_SKILL.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Git.fs  Program.fs  README.md  SKILL.md
.github/: FUNDING.yml
.github/agents/: tbdflow-agent.md
.github/devlog/: 2026-02-17-review.md  2026-03-21-review.md  2026-04-11-review.md  2026-04-18-activity.md  2026-04-18-review.md  2026-06-12-review.md  BACKLOG.md
.github/skills/code-analyzer/: SKILL.md
.github/skills/rust-developer/: SKILL.md
.github/skills/tbdflow/: SKILL.md
.github/workflows/: CI.yml  ci-and-publish.yml  publish-crate.yml  publish.yml  publish_gh.yml  rust-ci.yml  rust.yml
docs/: NBR-learnings.md  commit-demo.tape  nbr-review.yml.example  no_PRs.md  review-rules.md
docs/nbr-workflows/: attach-commit-state-success-manual.yaml  attach-commit-state-success-on-author-closed.yaml  auto_close_review_issues.yaml  handle_commit_comments.yaml  project-ids.yaml  review_issues_for_commit.yaml  update-review-issues.yaml
hooks/: pre-commit
plugins/: README.md
plugins/intellij/: .gitignore  .tbdflow.yml  README.md  build.gradle.kts  settings.gradle.kts
plugins/intellij/src/main/kotlin/io/github/cladam/tbdflow/: BranchAction.kt  BranchDialogue.kt  ChangelogAction.kt  ChangelogDialogue.kt  ChangelogResultDialogue.kt  CheckBranchesAction.kt  CommandResultDialogue.kt  CommitAction.kt  CommitDialogue.kt  CompleteAction.kt  CompleteDialogue.kt  CurrentBranchAction.kt  InitAction.kt  StatusAction.kt  SyncAction.kt  TerminalHelper.kt  UpdateAction.kt
plugins/intellij/src/main/kotlin/io/github/cladam/tbdflow/commit/: CommitAction.kt  CommitDialogue.kt  ShowTbdflowCommitToolWindowAction.kt  TbdflowCommitPanel.kt  TbdflowCommitToolWindowFactory.kt
plugins/intellij/src/main/kotlin/io/github/cladam/tbdflow/settings/: TbdflowSettingsConfigurable.kt  TbdflowSettingsState.kt
reports/: choreo_test_report_20260228_130530.json  choreo_test_report_20260228_130652.json  choreo_test_report_20260228_130715.json  choreo_test_report_20260228_130742.json  choreo_test_report_20260228_130749.json  choreo_test_report_20260228_131645.json  choreo_test_report_20260228_131732.json  choreo_test_report_20260228_131740.json  choreo_test_report_20260228_131752.json  choreo_test_report_20260228_132228.json  choreo_test_report_20260228_132506.json  choreo_test_report_20260228_173745.json  choreo_test_report_20260228_173755.json  choreo_test_report_20260228_173839.json  choreo_test_report_20260228_174021.json  choreo_test_report_20260228_174024.json  choreo_test_report_20260228_174030.json  choreo_test_report_20260228_174032.json  choreo_test_report_20260228_174034.json  choreo_test_report_20260228_174052.json  choreo_test_report_20260228_174130.json  choreo_test_report_20260228_174145.json  choreo_test_report_20260228_174210.json  choreo_test_report_20260228_174231.json  choreo_test_report_20260228_174410.json  choreo_test_report_20260228_174413.json  choreo_test_report_20260228_174417.json  choreo_test_report_20260228_174420.json  choreo_test_report_20260228_174423.json  choreo_test_report_20260228_192105.json  choreo_test_report_20260228_192115.json  choreo_test_report_20260228_192117.json  choreo_test_report_20260228_192119.json  choreo_test_report_20260228_192140.json  choreo_test_report_20260228_192201.json  choreo_test_report_20260228_192339.json  choreo_test_report_20260228_192412.json  choreo_test_report_20260228_192415.json  choreo_test_report_20260228_192438.json  choreo_test_report_20260228_192439.json  (+102 more)
scripts/: persona_report.py
src/: branch.rs  changelog.rs  cli.rs  commands.rs  commit.rs  config.rs  git.rs  intent.rs  lib.rs  main.rs  misc.rs  radar.rs  recover.rs  review.rs  wizard.rs
tbdflow-fs/: README.md
tbdflow-rs/: .gitignore  .tbdflow.yml  Cargo.toml  README.md
tbdflow-rs/docs/: DoD.md
tbdflow-rs/src/: cli.rs  commit.rs  config.rs  git.rs  lib.rs  main.rs  misc.rs
tbdflow-rs/tests/: cli.rs  git_tests.rs  git_workflow.rs  util.rs
tests/: cli.rs  git_workflow.rs  tbdflow_branch.chor  tbdflow_commit.chor  tbdflow_commit_types.chor  tbdflow_complete.chor  tbdflow_preflight.chor  tbdflow_radar.chor  tbdflow_sync_status.chor  tbdflow_undo.chor  ticket.txt  util.rs
tests/explorations/: explore_architect.chor  explore_newbie.chor  explore_purist.chor  explore_refugee.chor
tests/personas/: gitflow_refugee.chor  monorepo_architect.chor  nervous_newbie.chor  tbd_purist.chor
