[package]
name = "tbdflow"
version = "0.21.0"
authors = ["Claes Adamsson <claes.adamsson@gmail.com>"]
repository = "https://github.com/cladam/tbdflow"
readme = "README.md"
license = "MIT"
description = "A CLI to streamline your Git workflow for Trunk-Based Development."
keywords = ["git", "cli", "workflow", "tbd"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
clap_mangen = "0.2.31"
clap_complete = "4.5.66"
colored = "3.1.1"
thiserror = "2.0.18"
anyhow = "1.0.102"
chrono = "0.4.43"
glob = "0.3.3"
serde_yaml = "0.9.33"
serde = { version = "1.0.228", features = ["derive"] }
dialoguer = "0.12.0"
self_update = "0.42.0"
regex = "1.12.3"
git-conventional = "1.0.0"
[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[dev-dependencies]
serial_test = "3.3.1"
tempfile = "3.25.0"
assert_cmd = "2.1.2"
predicates = "3.1.4"

[lib]
name = "tbdflow"
path = "src/lib.rs"