[package]
name = "tbdflow"
version = "0.26.0"
authors = ["Claes Adamsson <claes.adamsson@gmail.com>"]
repository = "https://github.com/cladam/tbdflow"
readme = "README.md"
license = "MIT"
description = "A CLI to streamline your Git workflow for Trunk-Based Development."
keywords = ["git", "cli", "workflow", "tbd"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_mangen = "0.3.0"
clap_complete = "4.6.0"
colored = "3.1.1"
thiserror = "2.0.18"
anyhow = "1.0.102"
chrono = "0.4.44"
glob = "0.3.3"
yaml_serde = "0.10.4"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
dialoguer = "0.12.0"
self_update = "0.44.0"
regex = "1.12.3"
git-conventional = "1.1.0"
[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3.27.0"
assert_cmd = "2.2.0"
predicates = "3.1.4"

[lib]
name = "tbdflow"
path = "src/lib.rs"