[package]
name = "tbdflow"
version = "1.0.0"
authors = ["Claes Adamsson <claes.adamsson@gmail.com>"]
readme="README.md"
license = "MIT"
description = "A CLI tool for Trunk-Based Development (TBD) workflows"
keywords = ["git", "cli", "workflow", "tbd"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
tempfile = "3.20.0"
serial_test = "3.2.0"
predicates = "3.1.3"
assert_cmd = "2.0.17"

[lib]
name = "tbdflow"
path = "src/lib.rs"