[package]
name = "tbdflow"
version = "0.9.2"
authors = ["Claes Adamsson <claes.adamsson@gmail.com>"]
repository = "https://github.com/cladam/tbdflow"
readme="README.md"
license = "MIT"
description = "A CLI to streamline your Git workflow for Trunk-Based Development."
keywords = ["git", "cli", "workflow", "tbd"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
clap_mangen = "0.2.29"
colored = "3.0.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
chrono = "0.4.41"
serde_yaml = "0.9.33"
serde = { version = "1.0.219", features = ["derive"] }
dialoguer = "0.11.0"
regex = "1.11.1"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.20.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"

[lib]
name = "tbdflow"
path = "src/lib.rs"